Chore: Did a lot of stuff, not a lot of cool stuff